sfdx-source/main/default/objects/Test_Run__c/fields/Failing_Tests_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Failing_Tests_Percentage__c</fullName>
    <description>The total failing unit test percentage for the test run</description>
    <formula>Test_Failures__c / Total_Tests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total failing unit test percentage for the test run</inlineHelpText>
    <label>Failing Tests Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>