sfdx-source/main/default/objects/Test_Run__c/fields/Min_Apex_Execution_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Min_Apex_Execution_Run_Time__c</fullName>
    <description>The minimum apex execution for one of the related test run method results in milliseconds.</description>
    <inlineHelpText>The minimum apex execution for one of the related test run method results in milliseconds.</inlineHelpText>
    <label>Min Apex Execution Run Time</label>
    <summarizedField>Test_Run_Method_Result__c.Run_Time__c</summarizedField>
    <summaryFilterItems>
        <field>Test_Run_Method_Result__c.Run_Time__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>