sfdx-source/main/default/objects/Test_Run__c/fields/Passing_Tests_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Passing_Tests_Percentage__c</fullName>
    <description>The total passing unit test percentage for the test run</description>
    <formula>Total_Passing_Tests__c / Total_Tests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total passing unit test percentage for the test run</inlineHelpText>
    <label>Passing Tests Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>