sfdx-source/main/default/objects/Test_Run__c/fields/Total_Apex_Execution_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Apex_Execution_Run_Time__c</fullName>
    <description>The run time of all test methods in milliseconds.</description>
    <inlineHelpText>The run time of all test methods in milliseconds.</inlineHelpText>
    <label>Total Apex Execution Run Time</label>
    <summarizedField>Test_Run_Method_Result__c.Run_Time__c</summarizedField>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>