sfdx-source/main/default/objects/Test_Run__c/fields/Total_Passing_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Passing_Tests__c</fullName>
    <description>The total number of passing unit tests</description>
    <inlineHelpText>The total number of passing unit tests</inlineHelpText>
    <label>Total Passing Tests</label>
    <summaryFilterItems>
        <field>Test_Run_Method_Result__c.Method_Pass__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>