sfdx-source/main/default/objects/Test_Run__c/fields/Total_Test_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Test_Run_Time__c</fullName>
    <description>The total time the TestRunProcessorBatch took to process all completed unit tests.</description>
    <formula>IF(NOT(ISBLANK(Start_Date__c)) &amp;&amp; NOT(ISBLANK(End_Date__c)) , TEXT(
FLOOR(End_Date__c - Start_Date__c)
) &amp; &quot; Day(s) &quot; &amp;
TEXT(
ROUND(MOD((End_Date__c - Start_Date__c)*24,24),0)
) &amp;&quot; Hour(s) &quot; &amp;
TEXT(
ROUND(MOD((End_Date__c - Start_Date__c)*1440,60),0)
) &amp;&quot; Minute(s) &quot;, &quot;&quot;)</formula>
    <inlineHelpText>The total time the TestRunProcessorBatch took to process all completed unit tests.</inlineHelpText>
    <label>Total Test Run Time</label>
    <type>Text</type>
</CustomField>