sfdx-source/main/default/objects/Test_Run__c/fields/Total_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Tests__c</fullName>
    <description>The total number of unit tests for this test run.</description>
    <inlineHelpText>The total number of unit tests for this test run.</inlineHelpText>
    <label>Total Tests</label>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>