sfdx-source/main/default/objects/Test_Run__c/fields/TotalClassesUnder75PercentCoverage__c.field-meta.xml
<CustomField>
    <fullName>TotalClassesUnder75PercentCoverage__c</fullName>
    <description>The total number of classes that had under 75% code coverage for the test run.</description>
    <inlineHelpText>The total number of classes that had under 75% code coverage for the test run.</inlineHelpText>
    <label>Total Classes Under 75 Percent Coverage</label>
    <summaryFilterItems>
        <field>CodeCoverage__c.CodeCoveragePercentage__c</field>
        <operation>lessThan</operation>
        <value>75.00</value>
    </summaryFilterItems>
    <summaryForeignKey>CodeCoverage__c.TestRun__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>