sfdx-source/main/default/objects/Test_Run__c/fields/TotalCodeCoveragePercentage__c.field-meta.xml
<CustomField>
    <fullName>TotalCodeCoveragePercentage__c</fullName>
    <description>The total code coverage percentage for the test run. This is also a snapshot of the org code coverage when the test run is processed.</description>
    <formula>TotalLinesCovered__c / TotalLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total code coverage percentage for the test run. This is also a snapshot of the org code coverage when the test run is processed.</inlineHelpText>
    <label>Total Code Coverage Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>