sfdx-source/main/default/objects/Test_Run__c/fields/TotalLines__c.field-meta.xml
<CustomField>
    <fullName>TotalLines__c</fullName>
    <description>The total number of apex lines.</description>
    <formula>TotalLinesCovered__c + TotalLinesNotCovered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of apex lines.</inlineHelpText>
    <label>Total Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>