sfdx-source/main/default/objects/Test_Run__c/fields/TotalLinesCovered__c.field-meta.xml
<CustomField>
    <fullName>TotalLinesCovered__c</fullName>
    <description>The total number of lines that are covered in unit tests.</description>
    <inlineHelpText>The total number of lines that are covered in unit tests.</inlineHelpText>
    <label>Total Lines Covered</label>
    <summarizedField>CodeCoverage__c.LinesCovered__c</summarizedField>
    <summaryForeignKey>CodeCoverage__c.TestRun__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>