sfdx-source/main/default/objects/Test_Run__c/fields/TotalLinesNotCovered__c.field-meta.xml
<CustomField>
    <fullName>TotalLinesNotCovered__c</fullName>
    <description>The total number of lines that are not covered in unit tests.</description>
    <inlineHelpText>The total number of lines that are not covered in unit tests.</inlineHelpText>
    <label>Total Lines Not Covered</label>
    <summarizedField>CodeCoverage__c.LinesNotCovered__c</summarizedField>
    <summaryForeignKey>CodeCoverage__c.TestRun__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>