sfdx-source/main/default/objects/Test_Run__c/fields/TotalTestMethodsWithLong_Execution__c.field-meta.xml
<CustomField>
    <fullName>TotalTestMethodsWithLong_Execution__c</fullName>
    <description>Total number of test methods that took 30 seconds are longer to complete.</description>
    <inlineHelpText>Total number of test methods that took 30 seconds are longer to complete.</inlineHelpText>
    <label>Total Test Methods With Long Execution</label>
    <summaryFilterItems>
        <field>Test_Run_Method_Result__c.Run_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>30000</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Run_Method_Result__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>